--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
   }
 
 body {
     background-color: #f1f1f1;
-    padding: 20px;
     font-family: Arial;
 }
 
@@ -78,7 +79,7 @@ body {
 
 /* Center website */
 .main {
-    max-width: 1000px;
+    max-width: 100%;
     margin: auto;
 }
 
@@ -114,6 +115,11 @@ h1 {
 .content {
     background-color: white;
     padding: 10px;
+}
+
+.project-img {
+  width: 100%;
+  height:220px;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
